--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sveltekit-tailwind-template",
+  "name": "mood-tracker",
   "version": "0.0.1",
   "scripts": {
     "dev": "svelte-kit dev",
@@ -19,12 +19,16 @@
     "postcss": "^8.4.12",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
-    "svelte": "^3.44.0",
+    "svelte": "^3.47.0",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.10.1",
     "tailwindcss": "^3.0.23",
     "tslib": "^2.3.1",
     "typescript": "~4.6.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "firebase": "^9.6.10",
+    "svelte-frappe-charts": "^1.9.1"
+  }
 }
